; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2k_linux.c_getvalue.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2k_linux.c_getvalue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32)* @getvalue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @getvalue(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i8* @getargpos(i8* %6, i32 %7)
  store i8* %8, i8** %3, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i8*, i8** %3, align 8
  %13 = call i64 @strtoul(i8* %12, i32 0, i32 0)
  store i64 %13, i64* %5, align 8
  br label %15

14:                                               ; preds = %2
  store i64 -1, i64* %5, align 8
  br label %15

15:                                               ; preds = %14, %11
  %16 = load i64, i64* %5, align 8
  ret i64 %16
}

declare dso_local i8* @getargpos(i8*, i32) #1

declare dso_local i64 @strtoul(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
